kubernetes/network/project-only-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: word-picker-can-answer
spec:
  podSelector:
    matchLabels:
      deployment: word-picker
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            run: tmp-shell-p1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tmp-shell-allow-egress
spec:
  podSelector:
    matchLabels:
      run: tmp-shell-p1
  policyTypes:
  - Egress
  egress:
    # - to:
    #   - podSelector: {}
    - to:
      - namespaceSelector: {}
